# golds-gym

./: .gitignore  CHANGELOG.md  Makefile  README.md  golds-gym.cabal  stack.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
example/: Spec.hs
src/Test/Hspec/: BenchGolden.hs
src/Test/Hspec/BenchGolden/: Arch.hs  CSV.hs  Lenses.hs  Runner.hs  Types.hs
test/: Properties.hs
