cabal-version:      3.0
name:               golds-gym
version:            0.1.0.0
synopsis:           Golden testing framework for performance benchmarks
description:
    A Haskell framework for golden testing of timing benchmarks.
    Benchmarks are saved to golden files on first run and compared
    against on subsequent runs. Golden files are architecture-specific
    to account for hardware differences.
    .
    Based on hspec and benchpress.

license:            MIT
license-file:       LICENSE
author:             Marco Zocca
maintainer:         @ocramz
category:           Testing
build-type:         Simple
extra-doc-files:    README.md

library
    exposed-modules:
        Test.Hspec.BenchGolden
        Test.Hspec.BenchGolden.Types
        Test.Hspec.BenchGolden.Arch
        Test.Hspec.BenchGolden.Runner

    build-depends:
        base >= 4.14 && < 5,
        hspec-core >= 2.10 && < 3,
        benchpress >= 0.2 && < 0.3,
        aeson >= 2.0 && < 3,
        directory >= 1.3 && < 2,
        filepath >= 1.4 && < 2,
        time >= 1.9 && < 2,
        process >= 1.6 && < 2,
        text >= 1.2 && < 3,
        bytestring >= 0.10 && < 0.13,
        statistics >= 0.16 && < 0.17,
        vector >= 0.12 && < 0.14,
        boxes >= 0.1 && < 0.2

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite golds-gym-example
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   example
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >= 4.14 && < 5,
        golds-gym,
        hspec >= 2.10 && < 3
